# usbk-cli

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.tr  TODO  autogen.sh  cmake_uninstall.cmake.in  configure  configure.ac
CMakeModules/: Cross_x86_64.cmake  FindUDEV.cmake  Uninstaller.cmake  cmake_uninstall.cmake  cmake_uninstall.cmake.in
LibUSBK/: CMakeLists.txt
LibUSBK/src/: general.h  libusbk.cpp  libusbk.h  uip.h  usbk_sg_ctl.cpp  usbk_sg_ctl.h
USBK_CLI/: CMakeLists.txt
USBK_CLI/src/: main.cpp
eski_src/: libusbk.cpp  main.cpp  usbk_scsi.cpp
libusbk/: CMakeLists.txt  FindUDEV.cmake  Makefile.am
libusbk++/: CMakeLists.txt
libusbk++/src/: config.hpp.cmake  libusbk.cpp  libusbk.hpp
libusbk/src/: config.h.cmake  general.h  libusbk.c  libusbk.cpp  libusbk.h  uip.h  usbk_scsi.c  usbk_scsi.cpp  usbk_scsi.h
libusbk/src/linux/: usbk_sg_ctl.c  usbk_sg_ctl.cpp  usbk_sg_ctl.h
libusbk/src/windows/: libusbk.def  usbk_sg_ctl.cpp  usbk_sg_ctl.h
man/: CMakeLists.txt  FindGZIP.cmake  usbk.1  usbk.txt
src/: General.h  Makefile.am  ScsiStructure.h  general.h  libusbk.cpp  libusbk.h  lsusbk.cpp  lsusbk.h  main.cpp  scsi_structure.h  uip.h  usbk.cpp  usbk.h  usbk_scsi.cpp  usbk_scsi.h  usbk_sg_ctl.cpp  usbk_sg_ctl.h
src/.deps/: lsusbk.Po  usbk.Po  usbk_scsi.Po  usbk_sg_ctl.Po
usbk_cli/: CMakeLists.txt  Makefile.am
usbk_cli/src/: main.cpp
usbk_cli_pp/: CMakeLists.txt
usbk_cli_pp/src/: config.hpp.cmake  main.cpp
